--- a/The Temple/Temple.tex
+++ b/The Temple/Temple.tex
@@ -15,16 +15,16 @@
 \textit{(Manuskript gefunden an der Küste Yucatáns)}
 \end{center}
 
-%"On August 20, 1917..." klingt ohne das "Heute" im Deutschen nicht sinnvoll. Auch: "Imperial German Navy" -> "seiner Kaiserlichen Marine", da das für einen dt. Kommandanten die angebrachtere Formulierung seind dürfte.
+%"On August 20, 1917..." klingt ohne das "Heute" im Deutschen nicht sinnvoll. Auch: "Imperial German Navy" -> "seiner Kaiserlichen Marine", da das für einen dt. Kommandanten die angebrachtere Formulierung sein dürfte.
 Heute, am 20. August 1917 übergebe ich, Karl Heinrich Graf von Altberg-\-Ehren\-stein, Korvettenkapitän seiner Kaiserlichen Marine und Kommandant des Ubootes U29 diese Flasche mit Aufzeichnungen dem Atlantischen Ozean an mir unbekannter Stelle, aber wahrscheinlich etwa 20\textdegree N, 35\textdegree W, wo mein Schiff schwer beschädigt auf dem Meeresgrund liegt. Ich tue dies aus einem Bedürfnis, gewisse ungewöhnliche Fakten der Öffentlichkeit darzulegen; etwas wozu ich aller Wahrscheinlichkeit nach nicht mehr persönlich in der Lage sein werde, da die mich umgebenden Umstände so bedrohlich wie außergewöhnlich sind und nicht nur die Havarie der U29 sondern auch die Beeinträchtigung meines eisernen, Deutschen Willens auf katastrophale Weise betreffen.
 
 Am Nachmittag des 18. Juni, wie über Funk an die auf Kurs nach Kiel befindliche U61 mitgeteilt, torpedierten wir den Britischen Frachter \textit{Victory}, von New York nach Liverpool, bei 45\textdegree 16' N, 28\textdegree 34' W und gestatteten der Besatzung, die Rettungsboote zu besteigen um eindrucksvolle Filmaufnahmen für die Admiralität zu liefern. Das Schiff sank geradezu malerisch; Bug voran, das Heck sich hoch aus dem Wasser erhebend als der Rumpf senkrecht dem Meeresboden entgegen glitt. Unsere Kamera verpasste nichts davon und ich bedauere, dass ein so herrliches Stück Film niemals Berlin erreichen wird. Schließlich versenkten wir die Boote mit unseren Geschützen und tauchten.
 
-Als wir gegen Sonnenuntergang wieder an die Oberfläche stiegen, fand sich die Leiche eines Seemanns auf dem Deck, mit den Händen auf eigentümliche Weise die Reling umklammernd. Der arme Kerl war noch jung, dunkelhäutig und sehr gut aussehend; wahrscheinlich ein Italiener oder Grieche und zweifellos Teil der Besatzung der Victory. Er hatte offensichtlich Zuflucht gesucht, auf eben jenem Schiff, welches gezwungen worden war, sein eigenes zu zerstören --- ein weiteres Opfer dieses ungerechtfertigten Angriffskrieges, den die Englischen Schweinehunde gegen das Vaterland führen. Unsere Männer durchsuchten den Körper nach Souvenirs und fanden in seiner Manteltasche ein merkwürdiges Stück Elfenbein, in Form eines mit Lorbeer gekrönten Jünglingskopfes geschnitzt.
+Als wir gegen Sonnenuntergang wieder an die Oberfläche stiegen, fand sich die Leiche eines Seemanns auf dem Deck, mit den Händen auf eigentümliche Weise die Reling umklammernd. Der arme Kerl war noch jung, dunkelhäutig und sehr gut aussehend; wahrscheinlich ein Italiener oder Grieche und zweifellos Teil der Besatzung der \textit{Victory}. Er hatte offensichtlich auf eben jenem Schiff Zuflucht gesucht, welches gezwungen worden war, sein eigenes zu zerstören --- ein weiteres Opfer dieses ungerechtfertigten Angriffskrieges, den die Englischen Schweinehunde gegen das Vaterland führen. Unsere Männer durchsuchten den Körper nach Souvenirs und fanden in seiner Manteltasche ein merkwürdiges Stück Elfenbein, in Form eines mit Lorbeer gekrönten Jünglingskopfes geschnitzt.
 %"fellow officer" -> "Mitoffizier"? Mir fällt nichts besseres ein.
 Mein Mitoffizier, Leutnant Klenze, schätzte, das Ding sei großen Alters und künstlerischen Wertes und nahm es von den Männern für sich selbst. Wie es jemals in den Besitz eines einfachen Matrosen gekommen war, konnten weder er noch ich uns vorstellen.
 
-Als der Tote über Bord geworfen wurde, trugen sich zwei Ereignisse zu, die für große Verstörung unter der Besatzung sorgten. Die Augen des Burschen waren geschlossen gewesen, wurden jedoch durch das Zerren des Körpers zur Reling aufgerissen und viele schienen der eigenartigen Vorstellung zu erliegen, dass sie die Matrosen Schmidt und Zimmer fortlaufend spöttisch anstarrten. Bootsmann Müller, ein älterer Kerl, der es hätte besser wissen können, wäre er nicht ein abergläubisches Elsässer Schwein gewesen, regte dieser Eindruck so sehr auf, dass er den Körper im Wasser beobachtete und schwor, dass dieser, nachdem er kurz unterzugehen schien, seine Glieder in Schwimmhaltung zog und unter dem Wellengang nach Süden davonkraulte. Klenze und ich waren von dieser Vorstellung bäuerlicher Ignoranz nicht angetan und wiesen die Männer streng zurecht, insbesondere Müller.
+Als der Tote über Bord geworfen wurde, trugen sich zwei Ereignisse zu, die für große Verstörung unter der Besatzung sorgten. Die Augen des Burschen waren geschlossen gewesen, wurden jedoch durch das Zerren des Körpers zur Reling aufgerissen und viele schienen der eigenartigen Vorstellung zu erliegen, dass sie die Matrosen Schmidt und Zimmer fortlaufend spöttisch anstarrten. Bootsmann Müller, ein älterer Kerl, der es hätte besser wissen können, wäre er nicht ein abergläubisches Elsässer Schwein gewesen, regte dieser Eindruck so sehr auf, dass er den Körper im Wasser beobachtete und schwor, dass dieser, nachdem er kurz unterzugehen schien, seine Glieder in Schwimmhaltung zog und unter dem Wellengang nach Süden davon kraulte. Klenze und ich waren von dieser Vorstellung bäuerlicher Ignoranz nicht angetan und wiesen die Männer streng zurecht, insbesondere Müller.
 
 Am nächsten Tag sorgte das Unwohlsein einiger Besatzungsmitglieder für eine beschwerliche Lage. Sie schienen offensichtlich unter der nervlichen Anspannung unserer langen Reise zu leiden und hatten schlechte Träume gehabt. Mehrere schienen sehr benommen und nachdem ich mich vergewissert hatte, dass sie ihre Schwäche nicht vortäuschten, entband ich sie von ihren Pflichten.
 %"The sea was rather rough..." mich stört das "ziemlich", aber es steht im Original... Lovecraft halt.
@@ -48,13 +48,13 @@ Am nächsten Nachmittag erschien aus dem Süden ein Schwarm Seevögel und der Oz
 
 Klenze und ich schliefen üblicherweise zu unterschiedlichen Zeiten und es ereignete sich während ich schlief, um ca. 5 Uhr morgens am 4. Juli, dass eine allgemeine Meuterei losbrach. Die sechs übrigen Schweine von Seemännern, befürchtend, dass wir verloren seien, barsten plötzlich in eine wahnsinnige Raserei über unsere Weigerung zwei Tage zuvor, uns dem Yankee-Schlachtschiff zu ergeben und sie verfielen in einen Zustand des Deliriums, des Fluchens und der Zerstörung. Sie brüllten wie die Tiere, die sie waren und zerschlugen willkürlich Instrumente und Einrichtung, während sie Unsinn über den Fluch des elfenbeinernen Götzen und den dunkelhäutigen toten Jüngling, der sie anstarre und wegschwimme. Leutnant Klenze schien paralysiert und unfähig, wie man es von einem weichen, weibischen Rheinländer erwarten würde. Ich erschoss alle sechs Männer, es war unerlässlich, und versicherte mich, dass keiner am Leben blieb.
 
-Wir warfen die Körper durch die Druckschleuse über Bord und waren allein in der U29. Klenze wirkte sehr nervös und trank viel. Wir entschieden, solange wie möglich am Leben zu bleiben und dabei die großen Vorräte an Proviant und Sauerstoff zu nutzen, von denen nichts unter den wahnsinnigen Possen dieser Schweinehunde von Seemännern gelitten hatte. Unsere Kompasse, Tiefenmesser und andere empfindliche Instrumente waren zerstört, so dass von nun an unsere Berechnungen bestimmt wurden durch Vermutungen, basierend auf unseren Uhren, dem Kalender und Schätzungen unseres Abdrifts, den wir anhand jeglicher Objekte, die wir durch die Luken oder den Kommandoturm erspähen konnten, festmachten. Glücklicherweise reichten unsere batterien noch für längerfristige Nutzung sowohl der Innenbeleuchtung als auch des Suchschwinwerfers. Wir warfen oft einen Strahl rund um das Schiff, doch sahen wir nur Delfine. Obwohl der gewöhnliche Delphinus Delphis ein Meeressäuger ist, auf Atemluft angewiesen, beobachtete ich einen der Schwimmer zwei Stunden lang ohne, dass er zwischendurch auftauchte.
+Wir warfen die Körper durch die Druckschleuse über Bord und waren allein in der U29. Klenze wirkte sehr nervös und trank viel. Wir entschieden, solange wie möglich am Leben zu bleiben und dabei die großen Vorräte an Proviant und Sauerstoff zu nutzen, von denen nichts unter den wahnsinnigen Possen dieser Schweinehunde von Seemännern gelitten hatte. Unsere Kompasse, Tiefenmesser und andere empfindliche Instrumente waren zerstört, so dass von nun an unsere Berechnungen bestimmt wurden durch Vermutungen, basierend auf unseren Uhren, dem Kalender und Schätzungen unseres Abdrifts, den wir anhand jeglicher Objekte, die wir durch die Luken oder den Kommandoturm erspähen konnten, festmachten. Glücklicherweise reichten unsere Batterien noch für längerfristige Nutzung sowohl der Innenbeleuchtung als auch des Suchscheinwerfers. Wir warfen oft einen Strahl rund um das Schiff, doch sahen wir nur Delfine. Obwohl der gewöhnliche Delphinus Delphis ein Meeressäuger ist, auf Atemluft angewiesen, beobachtete ich einen der Schwimmer zwei Stunden lang ohne, dass er zwischendurch auftauchte.
 
 Mit der Zeit nahmen Klenze und ich an, dass wir nach wie vor nach Süden trieben, während wir tiefer und tiefer sanken. Wir nahmen Notiz von der Meeresfauna und -flora und lasen viel darüber in den Büchern, die ich für Momente der Muße mit auf das Schiff gebracht hatte. Ich konnte jedoch nicht anders als die mindere wissenschaftliche Bildung meines Kameraden zu bemerken. Sein Verstand war nicht der eines Preussen, sondern Einbildungen und wertlosen Spekulationen zugeneigt. Der Umstand unseres nahenden Todes beeinträchtigte ihn auf sonderbare Weise und er betete oft in Reue um all die Männer, Frauen und Kinder, die wir auf den Meeresboden versenkt hatten. Dabei vergaß er, dass alle Taten hehr sind, die dem Deutschen Vaterlande dienen.
 %"...he became unbalanced..." -> "...wurde er unruhig..." klingt im Kontext besser als "unausgeglichen"
 Mit der Zeit wurde er unruhig und starrte den elfenbeinernen Götzen stundenlang an, dabei abstruse Geschichten von verlorenen und vergessenen Dingen unter dem Meer spinnend. Manchmal, als psychologisches Experiment, tat ich als glaubte ich ihm diese Verirrungen und hörte seinen endlosen poetischen Aussprüchen und Geschichten von versunkenen Schiffen zu. Er tat mir sehr leid, denn es gefällt mir nicht, einen Deutschen leiden zu sehen, doch war er kein Mann mit dem man zusammen sterben wollte. Ich selbst war stolz, zu wissen wie das Vaterland mein Andenken ehren würde und meine Söhne dazu erzogen werden würden, Männer wie ich zu werden.
 
-Am 9. August erspähten wir den Meeresboden und sandten den mächtigen Strahl des Suchscheinwerfers darüber. Es war eine weite, wellige ebene, größtenteils bedeckt mit Seegras und übersät mit den Schalen kleiner Weichtiere. Hier und dort befanden sich schleimige Objekte von merkwürdiger Form, in Seegras gehüllt und von seepockenverkrustet, von denen Klenze verkündete, sie seien uralte Schiffe, in ihren Gräbern liegend. Er selbst war besorgt durch eines: Eine Spitze aus solidem Material, die sich etwa vier Fuß über den Meeresgrund erhob, etwa 2 Fuß Durchmesser hatte und deren flache Seiten und glatte Oberfläche sich im stumpfen Winkel trafen. Ich hielt den Gipfel für ein Stück zu Tage tretenden Fels, doch Klenze meinte, darauf Gravuren zu erkennen. Nach einer Weile begann er zu schaudern und wandte sich beängstigt von der Kulisse ab, konnte jedoch nur erklären, dass ihn plötzlich die ungeheure Weite, Dunkelheit, Abgelegenheit und Rätselhaftigkeit jener Meeresabgründe überkommen habe. Sein Verstand war müde, doch ich, stets Deutsch, bemerkte zwei Dinge: Die U29 widerstand dem Druck der Tiefsee glänzend und die eigentümlichen Delfine umstreiften uns immer noch in dieser Tiefe, in der die Existenz höherer Lebensformen von den meisten Naturforschern für unmöglich gehalten wird. Ich war mir sicher, im Vorfeld unsere Tiefe überschätzt zu haben, jedoch mussten wir immer noch tief genug sein um diese beiden Phänomene bemerkenswert erscheinen zu lassen. Unsere Geschwindigkeit südwärts, gemessen anhand des Meeresbodens, entsprach etwa dem, was ich anhand von Organismen, an denen wir auf niedrigerer Tiefe vorbeigetrieben waren, überschlagen hatte.
+Am 9. August erspähten wir den Meeresboden und sandten den mächtigen Strahl des Suchscheinwerfers darüber. Es war eine weite, wellige ebene, größtenteils bedeckt mit Seegras und übersät mit den Schalen kleiner Weichtiere. Hier und dort befanden sich schleimige Objekte von merkwürdiger Form, in Seegras gehüllt und von Seepocken verkrustet, von denen Klenze verkündete, sie seien uralte Schiffe, in ihren Gräbern liegend. Er selbst war besorgt durch eines: Eine Spitze aus solidem Material, die sich etwa vier Fuß über den Meeresgrund erhob, etwa 2 Fuß Durchmesser hatte und deren flache Seiten und glatte Oberfläche sich im stumpfen Winkel trafen. Ich hielt den Gipfel für ein Stück zu Tage tretenden Fels, doch Klenze meinte, darauf Gravuren zu erkennen. Nach einer Weile begann er zu schaudern und wandte sich beängstigt von der Kulisse ab, konnte jedoch nur erklären, dass ihn plötzlich die ungeheure Weite, Dunkelheit, Abgelegenheit und Rätselhaftigkeit jener Meeresabgründe überkommen habe. Sein Verstand war müde, doch ich, stets Deutsch, bemerkte zwei Dinge: Die U29 widerstand dem Druck der Tiefsee glänzend und die eigentümlichen Delfine umstreiften uns immer noch in dieser Tiefe, in der die Existenz höherer Lebensformen von den meisten Naturforschern für unmöglich gehalten wird. Ich war mir sicher, im Vorfeld unsere Tiefe überschätzt zu haben, jedoch mussten wir immer noch tief genug sein um diese beiden Phänomene bemerkenswert erscheinen zu lassen. Unsere Geschwindigkeit südwärts, gemessen anhand des Meeresbodens, entsprach etwa dem, was ich anhand von Organismen, an denen wir auf niedrigerer Tiefe vorbeigetrieben waren, überschlagen hatte.
 
 Es war um 15:15 am 12. August, dass Klenze endgültig verrückt wurde. Er war im Kommandoturm am Suchscheinwerfer zugange gewesen, als ich ihn unterwegs in die Bibliothekskammer wahrnahm, in der ich lesend saß und sein Gesicht verriet ihn sofort. Ich wiederhole nun genau das, was er sagte und unterstreiche die Worte, die er betonte: \glqq\underline{Er} ruft! \underline{Er} ruft! Ich höre ihn! Wir müssen los!\grqq Während er dies sprach, nahm er den Elfenbeingötzen vom Tisch, steckte ihn sich in die Tasche und ergriff meinen Arm, bestrebt mich den Niedergang auf das Deck zu zerren. Sofort begriff ich, dass er vor hatte, die Luke zu öffnen und mich nach draußen ins Wasser zu stürzen, eine Laune mörderischer wie selbstmörderischer Manie, auf die ich schwerlich vorbereitet war. Als ich zögerte und versuchte, ihn zu beruhigen, wurde er noch ungestümer. \glqq Komm --- warte nicht weiter; es ist besser zu bereuen und Vergebung zu erfahren als sich zu widersetzen und verdammt zu werden!\grqq Dann versuchte ich das Gegenteil meines Beruhigungsversuches und sagte ihm, er sei verrückt --- bedauernswert wahnsinnig. Doch er war unberührt und rief: \glqq Bin ich verrückt, so ist dies Gnade! Mögen die Götter sich dem Mann erbarmen, der in Gefühllosigkeit bei Verstand bleiben kann bis zu seinem abscheulichen Ende! Komm und sei verrückt, solange \underline{er} noch gnadenvoll ruft!\grqq
 
@@ -65,7 +65,7 @@ An jenem Abend bereute ich, dass ich das Elfenbeinbildnis nicht heimlich aus des
 
 Am nächsten Tag stieg ich in den Kommandoturm und begann die übliche Erkundung mit dem Suchscheinwerfer. Im Norden bot sich das gleiche Bild wie in den letzten vier Tagen, seit wir den Meeresgrund erblickt hatten, doch ich bemerkte, dass sich der Abdrift der U29 verlangsamt hatte. Als ich den Strahl nach Süden richtete, bemerkte ich, dass der Meeresboden voraus mit einem deutlichen Gefälle abfiel und an einigen Stellen merkwürdig ebenmäßige Steine bar, angeordnet gemäß eines eindeutigen Musters. Das Boot sank nicht sofort auf die neue Meerestiefe herab, so dass ich bald gezwungen war, den Strahl des Scheinwerfers scharf nach unten zu richten. Durch die plötzliche Richtungsänderung wurde ein Draht losgerissen, was einige Minuten Verzögerung durch Reparaturen beanspruchte, doch schließlich schien das Licht wieder und erhellte die Meeressenke vor mir.
 
-Ich neige nicht zu Gefühlsregungen, doch mein Erstaunen war groß als ich sah, was der elektrische Lichtschein offenbarte. Und doch hätte ich, als jemand, der in höchster Preussischer Kultur aufgezogen worden war nicht verwundert sein sollen, denn Geologie und Tradition erzählen von großen Umkehrungen zwischen Meeres- und Kontinentalflächen. Was ich sah, war eine sorfgältig konstruierte Anordnung von verfallenen Bauwerken, alle von prunkvoller, doch nicht klassifizierbarer Architektur und in verschiedenem Erhaltungszustand. Die meisten schienen aus Marmor zu sein, der im Strahl des Suchscheinwerfers weiß aufleuchtete und der allgemeine Eindruck war der einer großen Stadt am Grund eines engen Tals mit zahlreichen abgeschiedenen Tempeln und Villen auf den steilen Hängen darüber. Die Dächer waren eingefallen und Säulen waren zerbrochen, doch verblieb hier noch immer ein Hauch von uralter Pracht, den nichts auszulöschen vermochte.
+Ich neige nicht zu Gefühlsregungen, doch mein Erstaunen war groß als ich sah, was der elektrische Lichtschein offenbarte. Und doch hätte ich, als jemand, der in höchster Preussischer Kultur aufgezogen worden war nicht verwundert sein sollen, denn Geologie und Tradition erzählen von großen Umkehrungen zwischen Meeres- und Kontinentalflächen. Was ich sah, war eine sorgfältig konstruierte Anordnung von verfallenen Bauwerken, alle von prunkvoller, doch nicht klassifizierbarer Architektur und in verschiedenem Erhaltungszustand. Die meisten schienen aus Marmor zu sein, der im Strahl des Suchscheinwerfers weiß aufleuchtete und der allgemeine Eindruck war der einer großen Stadt am Grund eines engen Tals mit zahlreichen abgeschiedenen Tempeln und Villen auf den steilen Hängen darüber. Die Dächer waren eingefallen und Säulen waren zerbrochen, doch verblieb hier noch immer ein Hauch von uralter Pracht, den nichts auszulöschen vermochte.
 
 %"Confronted at last with the Atlantis I had formerly deemed largely a myth..." Nicht zufrieden mit Übersetzung, besser evtl. "Letztendlich auf jenes Atlantis gestoßen..."
 Schließlich jenem Atlantis gegenüberstehend, das ich vorher weitestgehend als Märchen erachtet hatte, wurde ich zum eifrigsten Entdecker. Am Grund des Tals musste einst ein Fluss geflossen sein, denn als ich die Kulisse genauer begutachtete, erblickte ich die Reste von steinernen und marmornen Brücken und Dämmen sowie einstmals herrlich grüne Terrassen und Uferböschungen. In meinem Enthusiasmus wurde ich fast so idiotisch und gefühlsduselig wie der arme Klenze und bemerkte erst spät, dass die Südwärtsströmung endlich nachgelassen hatte und die U29 langsam aufsetzen ließ, so wie ein Flugzeug in einer Stadt an der Oberfläche aufsetzt. Ich stellte auch erst langsam fest, dass der ungewöhnliche Delfinschwarm verschwunden war.
@@ -73,10 +73,10 @@ Schließlich jenem Atlantis gegenüberstehend, das ich vorher weitestgehend als 
 Nach zwei Stunden ruhte das Boot auf einem gepflasterten Platz nahe der felsigen Wand des Tals. Auf einer Seite konnte ich die gesamte Stadt erblicken, wie sie von der Piazza hinunter zum Flussufer fiel, auf der anderen Seite, in erstaunlicher Nähe, sah ich mich gegenüber der reich verzierten und perfekt erhaltenen Fassade eines großen Bauwerks, augenscheinlich eines Tempels, der aus dem soliden Stein gehöhlt war.
 %Zeit wechselt im Original, in der Übersetzung beibehalten
 Über die ursprüngliche Konstruktion dieses gigantischen Dinges kann ich nur mutmaßen. Die Fassade von gewaltigem Ausmaß scheint eine fortlaufende Aushöhlung zu überdecken, denn sie enthält viele und weit verteilte Fenster.
-In der Mitte klafft ein riesiges, offenes Tor, dass man über eine eindrucksvolle Treppe erreicht und das von erlesenen Gravuren umgeben, wie Darstellungen von Bacchanalien im Relief. Am herausragendsten von allen sind die großen Säulen und Friese, jeweils dekoriert mit Skulpturen von unbeschreiblicher Schönheit, die offensichtlich idealisierte, pastorale Szenen und Prozessionen von Priestern und Priesterinnen, die fremdartiges zeremonielles Gerät trugen, in Anbetung eines strahlenden Gottes. Die Kunstwerke waren von phänomenaler Perfektion, von ihrer Grundvorstellung weitgehend Hellenisch und doch eigentümlich verschieden. Sie vermittelten eine Anmutung entsetzlicher Antiquität, als seien sie eher die entferntesten als die direkten Vorfahren griechischer Kunst. Auch kann ich nicht bezweifeln, dass jedes Detail dieser massiven Hervorbringung aus dem jungfräulichen Felsgestein dieses, unseres Planeten gestaltet wurde. Sie war offenkundig teil der Talseite, doch wie ihr gewaltiges Inneres ausgeschachtet worden war kann ich mir nicht ausmalen. Vielleicht lieferte eine Höhle odervielleicht eine Reihe von Höhlen den Kern. Weder Alter noch Überschwemmung haben der ursprünglichen Herrlichkeit dieses schauderhaften Gotteshauses, um das es sich hierbei handeln musste, zugesetzt --- und auch nach tausenden Jahren ruht es makellos und unberührt in der endlosen Nacht und Stille einer Meeresspalte.
+In der Mitte klafft ein riesiges, offenes Tor, dass man über eine eindrucksvolle Treppe erreicht und das von erlesenen Gravuren umgeben, wie Darstellungen von Bacchanalien im Relief. Am herausragendsten von allen sind die großen Säulen und Friese, jeweils dekoriert mit Skulpturen von unbeschreiblicher Schönheit, die offensichtlich idealisierte, pastorale Szenen und Prozessionen von Priestern und Priesterinnen, die fremdartiges zeremonielles Gerät trugen, in Anbetung eines strahlenden Gottes. Die Kunstwerke waren von phänomenaler Perfektion, von ihrer Grundvorstellung weitgehend Hellenisch und doch eigentümlich verschieden. Sie vermittelten eine Anmutung entsetzlicher Antiquität, als seien sie eher die entferntesten als die direkten Vorfahren griechischer Kunst. Auch kann ich nicht bezweifeln, dass jedes Detail dieser massiven Hervorbringung aus dem jungfräulichen Felsgestein dieses, unseres Planeten gestaltet wurde. Sie war offenkundig teil der Talseite, doch wie ihr gewaltiges Inneres ausgeschachtet worden war kann ich mir nicht ausmalen. Vielleicht lieferte eine Höhle oder vielleicht eine Reihe von Höhlen den Kern. Weder Alter noch Überschwemmung haben der ursprünglichen Herrlichkeit dieses schauderhaften Gotteshauses, um das es sich hierbei handeln musste, zugesetzt --- und auch nach tausenden Jahren ruht es makellos und unberührt in der endlosen Nacht und Stille einer Meeresspalte.
 
 %"...and the colossal temple with it's beauty and mystery" - Mir fehlt eine Übersetung für Mystery, die passend klingt. Alternative: "geheimnisvolle Schönheit" draus machen.
-Ich kann die Stunden nicht zählen, die ich damit verbrachte, die versunkene Stadt mit ihren Bauwerken, Gewölben, Statuen und Brücken, sowie den kolossalen Tempel in seiner Schönheit und Geheimnisumwittertheit zu betrachten. Obwohl mir bewusst war, dass mir der Tod bevorstand, war meine Neugier verzehrend und ich warf den Schein des Suchlichtes in eifriger Suche umher. Der Lichtstrahl gestattete es mir, viele Details zu erkennen, doch verweigerte er mir, irgendetwas im Innern des klaffenden Tores des in den Felsen gehauenen Tempels zu erkennen und nach einer Weile schaltete ich den Strom ab, der Notwendigkeit des Energiesparens bewusst. Die Strahlen waren nun merkbar dunkler als sie noch während der Wochen des Treibens gewesen waren. Und alswie geschärft durch den bevorstehenden Verlust des Lichtes, wuchs mein Verlangen, die wässrigen Geheimnisse zu erkunden. Ich, ein Deutscher, sollte der erste sein, der diese seit Äonen vergessenen Wege betritt! Ich fertigte und prüfte einen Tiefseetauchanzug aus verbundenem Metall und experimentieerte mit einem tragbaren Licht und Luftregenerator. Obwohl es mühevoll sein sollte, die Druckschleuse alleine zu bedienen, konnte ich alle Hindernisse durch meine wissenschaftlichen Fähigkeiten überwinden und tatsächlich höchstselbst in der toten Stadt herumlaufen.
+Ich kann die Stunden nicht zählen, die ich damit verbrachte, die versunkene Stadt mit ihren Bauwerken, Gewölben, Statuen und Brücken, sowie den kolossalen Tempel in seiner Schönheit und Geheimnisumwittertheit zu betrachten. Obwohl mir bewusst war, dass mir der Tod bevorstand, war meine Neugier verzehrend und ich warf den Schein des Suchlichtes in eifriger Suche umher. Der Lichtstrahl gestattete es mir, viele Details zu erkennen, doch verweigerte er mir, irgendetwas im Innern des klaffenden Tores des in den Felsen gehauenen Tempels zu erkennen und nach einer Weile schaltete ich den Strom ab, der Notwendigkeit des Energiesparens bewusst. Die Strahlen waren nun merkbar dunkler als sie noch während der Wochen des Treibens gewesen waren. Und als wie geschärft durch den bevorstehenden Verlust des Lichtes, wuchs mein Verlangen, die wässrigen Geheimnisse zu erkunden. Ich, ein Deutscher, sollte der erste sein, der diese seit Äonen vergessenen Wege betritt! Ich fertigte und prüfte einen Tiefseetauchanzug aus verbundenem Metall und experimentierte mit einem tragbaren Licht und Luftregenerator. Obwohl es mühevoll sein sollte, die Druckschleuse alleine zu bedienen, konnte ich alle Hindernisse durch meine wissenschaftlichen Fähigkeiten überwinden und tatsächlich höchstselbst in der toten Stadt herumlaufen.
 
 Am 16. August brachte ich es zustande, die U29 zu verlassen und bahnte mir mühevoll meinen Weg durch die zerstörten und von Schlick verstopften Straßen zu dem uralten Fluss. Ich fand keine Skelette oder andere menschliche Überreste vor, doch sammelte ich eine Fülle an archäologischem Wissen durch Skulpturen und Münzen. Davon kann ich jetzt nichts berichten bis auf meine Ehrfurcht vor dieser Kultur im Zenit ihrer Pracht während Höhlenbewohner Europa durchstreiften und der Nil unbewacht ins Meer floss. Andere müssen, angeleitet durch dieses Manuskript, sollte es jemals gefunden werden, die Mysterien enthüllen, die ich hier nur andeuten kann. Ich kehrte zum Boot zurück als meine Batterien schwach wurden, entschlossen den Felsentempel am nächsten Tag zu erkunden.
 
@@ -89,7 +89,7 @@ Klenze war wahnsinnig geworden und gestorben bevor er diesen finsteren Überrest
 
 %"...regardless of the future." fällt mir nichts besseres ein ohne die Satzstruktur zu verändern.
 Ich konnte Samstag Nacht nicht schlafen und schaltete die Lichter ein ohne mich um die Zukunft zu kümmern. Es war ärgerlich, dass die Elektrizität nicht Sauerstoff und Vorräte überdauern sollte. Ich fachte erneut meine Gedanken an einen sanften Tod an und begutachtete meine automatische Pistole. Gegen Morgen muss ich bei brennenden Lichtern eingeschlafen sein, denn ich erwachte gestern nachmittag in Dunkelheit und fand die Batterien leer vor. Ich strich nacheinander mehrere Streichhölzer an und ärgerte mich über die Unbedachtheit mit der wir vor langer Zeit die wenigen Kerzen, die wir mitführten aufgebraucht hatten.
-Nach dem Erlöschen des letzten Zündholzes, das ich zu Verschwenden wagte, saß ich sehr still und ohne Licht. Als ich das unausweichliche Ende bedachte, flohen meine Gedanken durch alle vorangegangenen Ereignisse und formten in mir einen bis dahin ruhenden Eindruck, der einen schwächeren und abergläubischen Mann hätte erzittern lassen: \textit{Der Kopf des strahlenden Gottes in den Skulpturen auf dem Felsentempel gleicht dem auf dem geschnitzten Stück Elfenbein, das der tote Matrose aus dem Meer brachte und das der arme Klenze wieder mit ins Meer genommen hattte.}
+Nach dem Erlöschen des letzten Zündholzes, das ich zu Verschwenden wagte, saß ich sehr still und ohne Licht. Als ich das unausweichliche Ende bedachte, flohen meine Gedanken durch alle vorangegangenen Ereignisse und formten in mir einen bis dahin ruhenden Eindruck, der einen schwächeren und abergläubischen Mann hätte erzittern lassen: \textit{Der Kopf des strahlenden Gottes in den Skulpturen auf dem Felsentempel gleicht dem auf dem geschnitzten Stück Elfenbein, das der tote Matrose aus dem Meer brachte und das der arme Klenze wieder mit ins Meer genommen hatte.}
 
 Ich war durch diesen Zufall etwas verstört, doch er machte mir keine Angst. Nur ein minderwertiger Denker hastet danach, das Einmalige und Komplizierte durch die primitive Abkürzung des Übernatürlichen zu erklären. Der Zufall war außergewöhnlich, doch ich war ein zu nüchterner Geist um diese jeglichen logischen Zusammenhangs entbehrenden Umstände zu verbinden oder auf unheimliche Weise die desaströsen Ereignisse, die von der \textit{Victory}-Sache bis zu meiner gegenwärtigen Notlage führten damit zu verknüpfen. Das Bedürfnis nach mehr Erholung verspürend, nahm ich ein Beruhigungsmittel und schlief noch etwas. Mein aufgeregter Zustand spiegelte sich in meinen Träumen, denn mir war als hörte ich die Schreie von Ertrinkenden und sähe tote Gesichter sich gegen die Luken des Bootes drücken. Zwischen den Toten war das lebendige, spöttische Gesicht des Jünglings mit dem Elfenbeingötzen.
 
@@ -102,5 +102,5 @@ Weitere Vorfälle sind chaotisch. Als ich in das unheimlich erleuchtete Tor und 
 
 Der Rest ist sehr einfach. Mein Antrieb, den Tempel zu besuchen und zu betreten ist nun zum unerklärlichen und gebieterischen Befehl geworden, der letztendlich nicht verweigert werden kann. Mein eigener, Deutscher Wille hat keine Kontrolle mehr über meine Taten und Willensentscheidungen sind fortan nur noch bei Nebensächlichkeiten möglich. Dieser Wahnsinn trieb Klenze in den Tod, barhäuptig und ungeschützt in den Ozean, doch ich bin ein Preusse und ein Mann von Verstand und werde mir bis zuletzt das bisschen was ich noch besitze zunutze machen. Als ich erkannte, dass ich gehen muss, habe ich meinen Taucheranzug, Helm und Luftregenerator zum sofortigen Überziehen vorbereitet und sofort begonnen, diesen hastigen Bericht aufzuschreiben in der Hoffnung, dass er eines Tages die Welt erreichen wird. Ich werde das Manuskript in einer Flasche versiegeln und der See anvertrauen wenn ich die U29 für immer verlasse.
 
-Ich habe keine Angst, nicht einmal vor den Prophezeihungen des verrückten Klenze. Was ich gesehen habe kann nicht wahr sein und ich weiß, dass dieser Wahnsinn meines eigenen Willens allenfalls zum Erstickungstod führt, wenn mir die Luft ausgeht. Das Licht im Tempel ist eine reine Wahnvorstellung und ich werde seelenruhig sterben, wie ein Deutscher; in den schwarzen und vergessenen Tiefen. Das dämonenhafte Gelächter, das ich höre während ich dies schreibe kommt lediglich aus meinem schwächelnden Hirn. Ich werde nun sorgsam meinen Taucheranzug anlegen und mutig die Stufen zu dem urzeitlichen Schrein heraufsteigen; jenem stillen Geheimnis unergründeter Gewässer und ungezählter Jahre.
+Ich habe keine Angst, nicht einmal vor den Prophezeiungen des verrückten Klenze. Was ich gesehen habe kann nicht wahr sein und ich weiß, dass dieser Wahnsinn meines eigenen Willens allenfalls zum Erstickungstod führt, wenn mir die Luft ausgeht. Das Licht im Tempel ist eine reine Wahnvorstellung und ich werde seelenruhig sterben, wie ein Deutscher; in den schwarzen und vergessenen Tiefen. Das dämonenhafte Gelächter, das ich höre während ich dies schreibe kommt lediglich aus meinem schwächelnden Hirn. Ich werde nun sorgsam meinen Taucheranzug anlegen und mutig die Stufen zu dem urzeitlichen Schrein heraufsteigen; jenem stillen Geheimnis unergründeter Gewässer und ungezählter Jahre.
 \end{document}
