CC-Reminder zum Tempel hinzugefuegt, Erstes Innsmouth-Material gepusht

--- a/The Temple/Temple.tex
+++ b/The Temple/Temple.tex
@@ -10,6 +10,10 @@
 		Sebastian Jackel (Übersetzung)}
 \date{}
 \maketitle
+\textit{Dieser Text steht unter einer Creative Commons CC-BY-SA Lizenz
+(siehe\\ creativecommons.org/licenses/by-sa/3.0/). Das Englische Original von H.P. Lovecraft ist Teil der Public Domain. Die dieser Übersetzung zugrunde liegende Originalfassung kann unter hplovecraft.com nachgelesen werden.}
+
+\vspace{12pt}
 
 \begin{center}
 \textit{(Manuskript gefunden an der Küste Yucatáns)}
@@ -103,4 +107,5 @@ Weitere Vorfälle sind chaotisch. Als ich in das unheimlich erleuchtete Tor und 
 Der Rest ist sehr einfach. Mein Antrieb, den Tempel zu besuchen und zu betreten ist nun zum unerklärlichen und gebieterischen Befehl geworden, der letztendlich nicht verweigert werden kann. Mein eigener, Deutscher Wille hat keine Kontrolle mehr über meine Taten und Willensentscheidungen sind fortan nur noch bei Nebensächlichkeiten möglich. Dieser Wahnsinn trieb Klenze in den Tod, barhäuptig und ungeschützt in den Ozean, doch ich bin ein Preusse und ein Mann von Verstand und werde mir bis zuletzt das bisschen was ich noch besitze zunutze machen. Als ich erkannte, dass ich gehen muss, habe ich meinen Taucheranzug, Helm und Luftregenerator zum sofortigen Überziehen vorbereitet und sofort begonnen, diesen hastigen Bericht aufzuschreiben in der Hoffnung, dass er eines Tages die Welt erreichen wird. Ich werde das Manuskript in einer Flasche versiegeln und der See anvertrauen wenn ich die U29 für immer verlasse.
 
 Ich habe keine Angst, nicht einmal vor den Prophezeiungen des verrückten Klenze. Was ich gesehen habe kann nicht wahr sein und ich weiß, dass dieser Wahnsinn meines eigenen Willens allenfalls zum Erstickungstod führt, wenn mir die Luft ausgeht. Das Licht im Tempel ist eine reine Wahnvorstellung und ich werde seelenruhig sterben, wie ein Deutscher; in den schwarzen und vergessenen Tiefen. Das dämonenhafte Gelächter, das ich höre während ich dies schreibe kommt lediglich aus meinem schwächelnden Hirn. Ich werde nun sorgsam meinen Taucheranzug anlegen und mutig die Stufen zu dem urzeitlichen Schrein heraufsteigen; jenem stillen Geheimnis unergründeter Gewässer und ungezählter Jahre.
+
 \end{document}
