Weitere Absätze zu Kapitel 2

--- a/The Shadow over Innsmouth/chapter2.tex
+++ b/The Shadow over Innsmouth/chapter2.tex
@@ -37,8 +37,20 @@ Orden des Dagon\grqq ausmachen konnte. Dies war also die ehemalige Logenhalle, d
 
 Der Lärm kam aus dem plump wirkenden Turm einer steinernen Kirche aus deutlich späterer Zeit als die meisten Häuser, gebaut in einem unbeholfenem gotischen Stil und mit einem unverhältnismäßig hohen Keller mit verriegelten Fensterläden. Obwohl die Zeiger der Uhr auf der Seite, die ich betrachtete fehlten, wusste ich, dass diese heisernen Glockenschläge elf Uhr ansagten. Dann wurden plötzlich alle Gedanken an die Zeit ausgelöscht durch ein hereinbrechendes Bild von scharfer Heftigkeit  und unerklärlichem Schrecken, das mich ergriffen hatte, bevor ich begriffen hatte, worum es sich handelte. Das Tor des Kirchenkellers stand offen und zeigte darin ein schwarzes Rechteck. Und als ich hereinschaute, kreuzte ein bestimmtes Objekt dieses dunkle Rechteck --- oder schien es zu kreuzen --- und brannte in meinen Verstand eine augenblickliche, alptraumhafte Vorstellung, die noch unerträglicher wirkte, weil eine Auseinandersetzung damit nicht eine einzige alptraumhafte Eigenschaft darin hervorbrachte.
 
-Es handelte sich um ein lebendes Objekt --- das erste außer dem Fahrer, dass ich gesehen hatte, seit wir in den inneren Bereich der Stadt vorgedrungen waren --- und wäre ich in einer beständigeren Stimmung gewesen, hätte ich darin nichts von Schrecken gefunden. Es war, wie mir einen Moment später einleuchtete, ganz klar der Pastor, gehüllt in sonderbare Gewänder, die zweifelsohne eingeführt worden waren, seit der Orden des Dagon die Rituale der hiesigen Kirchen verändert hatte. Das, was wahrscheinlich meinen ersten, unbewussten Blick eingefangen und den Hauch von bizarrem Entsetzen ausgelöst hatte, war die hohe Tiara, die er trug; ein fast exaktes Duplikat derjenigen, die Miss Tilton mir am Abend vorher gezeigt hatte. Dies hatte durch meine Vorstellungskraft ungenannte, sinistre Eigenschaften an das unbestimmte Gesicht und die zugehörige, schlurfende, in Roben gekleidete Gestalt verliehen. Es gab, wie ich bald beschloss, keinen Grund warum ich diese schauderhafte Berührung böser Pseudo-Erinnerungen erlebt haben sollte. War es nicht ganz selbstverständlich, dass ein lokaler, geheimnisvoller Kult in seiner Kleiderordnung eine einzigartige Sorte von Kopfbedeckung aufnehmen würde, die der Gemeinde auf irgendeine seltsame Weise bekannt war --- etwa als 
-Teil eines Schatzes?
+Es handelte sich um ein lebendes Objekt --- das erste außer dem Fahrer, dass ich gesehen hatte, seit wir in den inneren Bereich der Stadt vorgedrungen waren --- und wäre ich in einer beständigeren Stimmung gewesen, hätte ich darin nichts von Schrecken gefunden. Es war, wie mir einen Moment später einleuchtete, ganz klar der Pastor, gehüllt in sonderbare Gewänder, die zweifelsohne eingeführt worden waren, seit der Orden des Dagon die Rituale der hiesigen Kirchen verändert hatte. Das, was wahrscheinlich meinen ersten, unbewussten Blick eingefangen und den Hauch von bizarrem Entsetzen ausgelöst hatte, war die hohe Tiara, die er trug; ein fast exaktes Duplikat derjenigen, die Miss Tilton mir am Abend vorher gezeigt hatte. Dies hatte durch meine Vorstellungskraft ungenannte, sinistre Eigenschaften an das unbestimmte Gesicht und die zugehörige, schlurfende, in Roben gekleidete Gestalt verliehen. Es gab, wie ich bald beschloss, keinen Grund warum ich diese schauderhafte Berührung böser Pseudo-Erinnerungen erlebt haben sollte. War es nicht ganz selbstverständlich, dass ein lokaler, geheimnisvoller Kult in seiner Kleiderordnung eine einzigartige Sorte von Kopfbedeckung aufnehmen würde, die der Gemeinde auf irgendeine seltsame Weise bekannt war --- etwa als Teil eines Schatzes?
 
-      A very thin sprinkling of repellent-looking youngish people now became visible on the sidewalks—lone individuals, and silent knots of two or three. The lower floors of the crumbling houses sometimes harboured small shops with dingy signs, and I noticed a parked truck or two as we rattled along. The sound of waterfalls became more and more distinct, and presently I saw a fairly deep river-gorge ahead, spanned by a wide, iron-railed highway bridge beyond which a large square opened out. As we clanked over the bridge I looked out on both sides and observed some factory buildings on the edge of the grassy bluff or part way down. The water far below was very abundant, and I could see two vigorous sets of falls upstream on my right and at least one downstream on my left. From this point the noise was quite deafening. Then we rolled into the large semicircular square across the river and drew up on the right-hand side in front of a tall, cupola-crowned building with remnants of yellow paint and with a half-effaced sign proclaiming it to be the Gilman House.
-      I was glad to get out of that bus, and at once proceeded to check my valise in the shabby hotel lobby. There was only one person in sight—an elderly man without what I had come to call the “Innsmouth look”—and I decided not to ask him any of the questions which bothered me; remembering that odd things had been noticed in this hotel. Instead, I strolled out on the square, from which the bus had already gone, and studied the scene minutely and appraisingly.
+Langsam wurden, dünn versprengt, abstoßend aussehende jüngere Leute auf den Bürgersteigen sichtbar --- einzelne Individuen oder stille Gruppen von zwei oder drei. Die unteren Stockwerke der bröckelnden Häuser beherbergten manchmal kleine Läden mit schmuddeligen Schildern und ich bemerkte den gelegentlichen, geparkten Lastwagen and dem wir vorbeiratterten. Das Geräusch von Wasserfällen wurde immer deutlicher  und bald sah ich eine recht tiefe Klamm vor uns, die von einer breiten, von eisernen Geländern gesäumte Brücke auf deren anderer Seite sich ein Platz ausbreitete. Als wir über die Brücke schepperten, schaute ich nach beiden Seiten heraus und erspähte einige Fabrikgebäude an der Kante der grasbedeckten Klippe und auf halbem Weg darunter. Weit unter mir floss das Wasser reichlich und ich konnte zwei Gruppen von kraftvollen Wasserfällen zu meiner rechten und mindestens einen weiteren stromabwärts zu meiner Rechten sehen. An diesem Punkt war das Getöse ohrenbetäubend. Dann rollten wir auf den großen, halbkreisförmigen Platz jensetis des Flusses und hielten an der rechten Seite vor einem hohen, kuppelgekrönten Gebäude mit Überresten von gelber Farbe und einem halblesbaren Schild, das es als Gilman House auswies.
+
+Ich war froh, den Bus zu verlassen und schritt sogleich voran, um meine Reisetasche in der schäbigen Hotellobby zu hinterlegen. Dort war nur eine Person in Sicht -- ein älterer Mann ohne das, was ich das \glqq Innsmouth-Aussehen\grqq getauft hatte --- und ich entschied mich, ihm keine der Fragen zu stellen, die mich plagten, als ich mich an die merkwürdigen Dinge erinnerte, die in diesem Hotel bemerkt worden waren. Stattdessen schlenderte ich nach draußen auf den Platz, von dem aus der Bus schon weitergefahren war und beobachtete den Anblick minuziös und abwägend.
+
+Auf der einen Seite des gepflasterten, offenen Platzes sah man die gerade Linie des Flusses, auf der anderen einen Halbkreis aus schräg überdachten Ziegelbauten aus der Zeit um 1800, aus dem mehrere Straßen nach Südosten, Süden und Südwesten abgingen. Es gab erbärmlich wenige und kleine Lampen --- allesamt schwache Glühlampen --- und ich war froh, dass meine Pläne eine Abreise vor Einbruch der Dunkelheit vorsahen, obwohl ich wusste, dass der Mond hell scheinen würde. Die Gebäude waren allesamt in angemessenem Zustand und fassten vielleicht ein Dutzend geöffnete Läden unter denen sich ein Lebensmittelgeschäft der Kette First National, ein tristes Restaurant, eine Drogerie, zwei Fischgroßhändler, sowie am östlichsten Punkt des Platzes ein Büro der einzigen Industrie dieser Stadt --- der Marsh Refining Company. Man konnte vielleicht zehn Menschen sehen und vier oder fünf Autos und Laster standen verstreut herum. Ich konnte mir selbst denken, dass dies das Gemeindezentrum von Innsmouth war. Zum Osten konte ich flüchtige Blicke der blauen Umrisse des Hafens erhaschen, gegen die sich die verfallenden Überreste von drei einstmals schönen Georgianischen Kirchtürmen erhoben. Und zur Küste hin auf der anderen Seite des Flusses sah ich den weißen Glockenturm, der das was ich für die Marsh-Raffinerie hielt überragte.
+
+Aus irgendeinem Grund entschied ich mich, meine ersten Erhebungen im Lebensmittelgeschäft anzustellen, dessen Personal wahrscheinlich nicht aus Innsmouth stammen würde. Ich fand einen einzelnen Jungen von vielleicht siebzehn Jahren in Dienst und war froh über seine Heiterkeit und Freundlichkeit, die mir muntere Information versprachen. Er schien außergewöhnlich begierig, sich zu unterhalten und ich fand schnell heraus, dass er den Ort, seinen Fischgeruch und seine verstohlenen Leute nicht mochte. Ein Wortwechsel mit einem Außenstehenden war eine Befreiung für ihn. Er kam aus Arkham, lebte mit einer Familie aus Ipswich und ging zurück nach heim wann immer er eine Minute dienstfrei bekam. Seine Familie mochte nicht, dass er in Innsmouth arbeiten musste aber die Kette hatte ihn hierher versetzt und er wollte seinen Job nicht verlieren.
+
+Es gab, so sagte er, keine öffentliche Bibliothek oder Handelskammer in INnsmouth, doch ich könne mich wahrscheinlich zurechtfinden. Die Straße von der ich gekommen war, war die Federal. Westlich davon waren die feinen, alten Wohnstraßen --- Browad, Washington, Lafayette und Adams --- und östlich waren die küstennahen Elendsviertel. Es war in diesen Armensiedlungen --- und entlang der Hauptstraße --- wo ich die alten Georgianischen Kirchen finden würde, doch sie wären alle schon lange verlassen. Ich täte gut daran, mich in diesen Gegenden nicht zu auffällig zu verhalten --- insbesondere nördlich des Flusses --- da dort die Leute düster und feindselig seien. Einige Fremde wären sogar verschwunden.
+
+Manche Orte waren quasi verbotenes Gebiet, wie er unter beträhtlichem Aufwand gelernt hatte. Man sollte zum Beispiel nicht zu lange in der Nähe der Marsh-Raffinerie oder einer der noch genutzten Kirchen, oder um die säulengesäumte Ordenshalle des Dagon am New Church Green. Diese Kirchen waren seltsam --- allesamt von ihren Konfessionen anderswo heftigst abgeleugnet und sie nutzten offensichtlich die wunderlichsten Zeremonielle und geistlichen Gewänder. Ihre Glaubensbekenntnisse waren heterodox und mysteriös und umfassten Andeutungen über gewisse wundersame Transformationen, die zu einer Form von körperlicher Unsterblichkeit auf dieser Erde führen sollen. Der Pastor des Jungen, Dr. Wallace von der Bischöflichen Methodistenkurche von Asbury in Arkham, hatte ihn dringend ermahnt, keiner Kirche in Innsmouth beizutreten.
+
+Und was die Einwohner von Innsmouth anging, so wusste der Junge kaum, was er mit ihnen anfangen sollte. Sie waren so verstohlen und so selten anzutreffen wie Tiere, die sich in Bauten leben und man mochte sich kaum vorstellen, wie sie sich die Zeit vertrieben, außer durch die vereinzelte Fischerei. Vielleicht --- anhand der Menge von Schwarzgebranntem, den sie konsumierten zu urteilen --- lagen sie tagsüber die meisten Stunden, vom Alkoholrausch benommen. Sie schienen in ihrem Missmut in einer Art Gemeinschaft und gemeinsamer Auffassung vereint, die Welt zu verschmähen, als gäbe es andere, dieser vorzuziehende Sphären des Daseins. Ihr Aussehen --- besonders die starrenden Augen, die nie zu blinzeln schienen --- war sicherlich schockierend genug und ihre Stimmen klangen abscheulich. Es war entsetzlich, sie in ihren Kirchen des nachts singen zu hören, besonders zu ihren Hauptfestivitäten oder Erneuerungszeremonien, die zweimal im Jahr, am 30. April und am 31. Oktober stattfanden.
+
+Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Flluss als auch im Hafenbecken. Wettschwimmen raus zum Devil Reef fanden oft statt und jedermann schien gut fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren generell nur eher junge Leute in der Öffentlichkeit zu sehen und von diesen schienen die ältesten, am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq nicht ein selstames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
