--- a/The Shadow over Innsmouth/chapter2.tex
+++ b/The Shadow over Innsmouth/chapter2.tex
@@ -41,7 +41,7 @@ Es handelte sich um ein lebendes Objekt --- das erste außer dem Fahrer, dass ic
 
 Langsam wurden, dünn versprengt, abstoßend aussehende jüngere Leute auf den Bürgersteigen sichtbar --- einzelne Individuen oder stille Gruppen von zwei oder drei. Die unteren Stockwerke der bröckelnden Häuser beherbergten manchmal kleine Läden mit schmuddeligen Schildern und ich bemerkte den gelegentlichen, geparkten Lastwagen and dem wir vorbeiratterten. Das Geräusch von Wasserfällen wurde immer deutlicher  und bald sah ich eine recht tiefe Klamm vor uns, die von einer breiten, von eisernen Geländern gesäumte Brücke auf deren anderer Seite sich ein Platz ausbreitete. Als wir über die Brücke schepperten, schaute ich nach beiden Seiten heraus und erspähte einige Fabrikgebäude an der Kante der grasbedeckten Klippe und auf halbem Weg darunter. Weit unter mir floss das Wasser reichlich und ich konnte zwei Gruppen von kraftvollen Wasserfällen zu meiner rechten und mindestens einen weiteren stromabwärts zu meiner Rechten sehen. An diesem Punkt war das Getöse ohrenbetäubend. Dann rollten wir auf den großen, halbkreisförmigen Platz jensetis des Flusses und hielten an der rechten Seite vor einem hohen, kuppelgekrönten Gebäude mit Überresten von gelber Farbe und einem halblesbaren Schild, das es als Gilman House auswies.
 
-Ich war froh, den Bus zu verlassen und schritt sogleich voran, um meine Reisetasche in der schäbigen Hotellobby zu hinterlegen. Dort war nur eine Person in Sicht -- ein älterer Mann ohne das, was ich das \glqq Innsmouth-Aussehen\grqq getauft hatte --- und ich entschied mich, ihm keine der Fragen zu stellen, die mich plagten, als ich mich an die merkwürdigen Dinge erinnerte, die in diesem Hotel bemerkt worden waren. Stattdessen schlenderte ich nach draußen auf den Platz, von dem aus der Bus schon weitergefahren war und beobachtete den Anblick minuziös und abwägend.
+Ich war froh, den Bus zu verlassen und schritt sogleich voran, um meine Reisetasche in der schäbigen Hotellobby zu hinterlegen. Dort war nur eine Person in Sicht -- ein älterer Mann ohne das, was ich den \glqq Innsmouth-Anblick\grqq getauft hatte --- und ich entschied mich, ihm keine der Fragen zu stellen, die mich plagten, als ich mich an die merkwürdigen Dinge erinnerte, die in diesem Hotel bemerkt worden waren. Stattdessen schlenderte ich nach draußen auf den Platz, von dem aus der Bus schon weitergefahren war und beobachtete den Anblick minuziös und abwägend.
 
 Auf der einen Seite des gepflasterten, offenen Platzes sah man die gerade Linie des Flusses, auf der anderen einen Halbkreis aus schräg überdachten Ziegelbauten aus der Zeit um 1800, aus dem mehrere Straßen nach Südosten, Süden und Südwesten abgingen. Es gab erbärmlich wenige und kleine Lampen --- allesamt schwache Glühlampen --- und ich war froh, dass meine Pläne eine Abreise vor Einbruch der Dunkelheit vorsahen, obwohl ich wusste, dass der Mond hell scheinen würde. Die Gebäude waren allesamt in angemessenem Zustand und fassten vielleicht ein Dutzend geöffnete Läden unter denen sich ein Lebensmittelgeschäft der Kette First National, ein tristes Restaurant, eine Drogerie, zwei Fischgroßhändler, sowie am östlichsten Punkt des Platzes ein Büro der einzigen Industrie dieser Stadt --- der Marsh Refining Company. Man konnte vielleicht zehn Menschen sehen und vier oder fünf Autos und Laster standen verstreut herum. Ich konnte mir selbst denken, dass dies das Gemeindezentrum von Innsmouth war. Zum Osten konte ich flüchtige Blicke der blauen Umrisse des Hafens erhaschen, gegen die sich die verfallenden Überreste von drei einstmals schönen Georgianischen Kirchtürmen erhoben. Und zur Küste hin auf der anderen Seite des Flusses sah ich den weißen Glockenturm, der das was ich für die Marsh-Raffinerie hielt überragte.
 
@@ -53,9 +53,9 @@ Manche Orte waren quasi verbotenes Gebiet, wie er unter beträhtlichem Aufwand g
 
 Und was die Einwohner von Innsmouth anging, so wusste der Junge kaum, was er mit ihnen anfangen sollte. Sie waren so verstohlen und so selten anzutreffen wie Tiere, die sich in Bauten leben und man mochte sich kaum vorstellen, wie sie sich die Zeit vertrieben, außer durch die vereinzelte Fischerei. Vielleicht --- anhand der Menge von Schwarzgebranntem, den sie konsumierten zu urteilen --- lagen sie tagsüber die meisten Stunden, vom Alkoholrausch benommen. Sie schienen in ihrem Missmut in einer Art Gemeinschaft und gemeinsamer Auffassung vereint, die Welt zu verschmähen, als gäbe es andere, dieser vorzuziehende Sphären des Daseins. Ihr Aussehen --- besonders die starrenden Augen, die nie zu blinzeln schienen --- war sicherlich schockierend genug und ihre Stimmen klangen abscheulich. Es war entsetzlich, sie in ihren Kirchen des nachts singen zu hören, besonders zu ihren Hauptfestivitäten oder Erneuerungszeremonien, die zweimal im Jahr, am 30. April und am 31. Oktober stattfanden.
 
-Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Flluss als auch im Hafenbecken. Wettschwimmen raus zum Devil Reef fanden oft statt und jedermann schien gut fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren generell nur eher junge Leute in der Öffentlichkeit zu sehen und von diesen schienen die ältesten, am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq nicht ein selstames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
+Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Flluss als auch im Hafenbecken. Wettschwimmen raus zum Devil Reef fanden oft statt und jedermann schien gut fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren generell nur eher junge Leute in der Öffentlichkeit zu sehen und von diesen schienen die ältesten, am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob der \glqq Innsmouth-Anblick\grqq nicht ein selstames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
 
-Natürlich könnte nur ein sehr seltenes Leiden solche enormen und drastischen anatomischen Veränderunen in einem einzelnen ausgewachsenen Individuum --- Veränderungen, die Einfluss auf den Knochenbau bis auf die grundlegende Form des Schädels nahmen --- jedoch war nicht einmal dieser Gesichtspunkt rätselhafter oder beispielloser als die sichtbaren Züge der Krankheit im Ganzen. Es sei schwer, so bemerkte der Junge, zu diesem Thema irgendwelche wirklichen Schlüsse zu ziehen, da man die Einwohner nie persönlich kennenlerne, ganz gleich wie lang man in Innsmouth leben möge. 
+Natürlich könnte nur ein sehr seltenes Leiden solche enormen und drastischen anatomischen Veränderunen in einem einzelnen ausgewachsenen Individuum --- Veränderungen, die Einfluss auf den Knochenbau bis auf die grundlegende Form des Schädels nahmen --- jedoch war nicht einmal dieser Gesichtspunkt rätselhafter oder beispielloser als die sichtbaren Züge der Krankheit im Ganzen. Es sei schwer, so bemerkte der Junge, zu diesem Thema irgendwelche wirklichen Schlüsse zu ziehen, da man die Einwohner nie persönlich kennenlerne, ganz gleich wie lang man in Innsmouth leben möge.
 
 Der Jüngling war sich sicher, dass Exemplare, noch schlimmer als die schlimmsten sichtbaren, in einigen der  Häuser eingeschlossen gehalten wurden. Manchmal hörten Leute die seltsamsten Geräusche. Die wackeligen  Bruchbuden nördlich des Flusses waren angeblich durch geheime Tunnel verbunden und boten somit ein wahres Labyrinth ungesehener Abartigkeiten. Welch fremdes Blut --- falls überhaupt welches --- in diesen Wesen floss, war unmöglich zu sagen. Sie hielten manchmal bestimmte besonders widerwärtige Gestalten außer Sichtweite, wenn Regierungsbeamte und andere aus der Außenwelt in die Stadt kamen.
 
@@ -71,7 +71,7 @@ Es kursierten alle möglichen Gerüchte darüber, wie Marsh mittlerweile aussah.
 
 Eine der Marsh-Töchter war eine  abstoßende, einem Reptil ähnlich aussehende Frau, die ein Übermaß an merkwürdigem Schmuck, der ganz klar zur gleichen exotischen Tradition wie die fremdartige Tiara gehörte. Mein Informant hatte dies oft bemerkt und hatte gehört, wie man darüber sprach, dass dies aus einer Art geheimem Schatz stamme, entweder von Piraten oder Dämonen angelegt. Die Geistlichen --- oder Priester, oder wie auch immer sie hier nun genannt wurden --- trugen solche Schmuckstücke ebenfalls als Kopfschmuck, doch bekam man sie nur selten zu Gesicht. Mehr Exemplare hatte der Junge nicht gesehen, obwohl die Existenz von vielen weiteren in Innsmouth gerüchtet wurde.
 
-Die Marshes, zusammen mit den anderen drei vornehmen Familien der Stadt --- den Waites, den Gilmans und den Eliots --- lebten allesamt sehr zurückgezogen. Sie wohnten in immensen Häusern entlang der Washington Street und mehrere davon beherbergten vermeintlich einige lebende Verwandtschaft, deren Anblick ihnen Öffentlichkeit verbat und deren Tod bereits gemeldet und dokumentiert war. 
+Die Marshes, zusammen mit den anderen drei vornehmen Familien der Stadt --- den Waites, den Gilmans und den Eliots --- lebten allesamt sehr zurückgezogen. Sie wohnten in immensen Häusern entlang der Washington Street und mehrere davon beherbergten vermeintlich einige lebende Verwandtschaft, deren Anblick ihnen Öffentlichkeit verbat und deren Tod bereits gemeldet und dokumentiert war.
 
 Mich davor warnend, dass viele der Straßenschilder fehlten, malte der junge Mann für mich eine grobe, aber ausreichende und gewissenhaft gezeichnete Karte der auffälligsten Merkmale der Stadt. Nach einer kurzen Analyse war ich mir sicher, dass sie von großem Nutzen sein würde und steckte sie unter übermäßigem Dank in die Tasche. Da mir die Schäbigkeit des einzigen Restaurants, das ich gesehen hatte nicht zusagte, kaufte ich einen anständigen Vorrat an Käsegebäck und Ingwerplätzchen, die mir später als Mittagessen dienen sollten. Mein Programm, so entschied ich, sah es vor, mich entlang der Hauptstraßen zu hangeln und mit jeglichen nicht einheimischen Menschen zu sprechen, die ich treffen möge um danach den Acht-Uhr-Bus nach Arkham zu nehmen. Die Stadt, soviel war sichtbar, formte ein signifikantes und überspitztes Beispiel gemeindlichen Verfalls, doch ich, der ich kein Sozialwissenschaftler war, würde meine ernsthaften Beobachtungen auf das Feld der Architektur beschränken.
 
@@ -81,3 +81,20 @@ Die Schlucht auf der Main Street Bridge wieder überquerend, traf ich auf einen 
 Diese Fenster starrten so gespenstisch, dass es Überwindung kostete, sich ostwärts dem Ufer zuzuwenden. Sicher schwillt der Schrecken eines verlassenen Hauses eher in Form einer geometrischen, denn einer arithmetischen Folge mit der Zahl der Häuser, die sich mehren um eine Stadt gänzlicher Verwüstung zu formen. Der Anblick solch endloser Alleen von fischäugiger Leere und Tod und der Gedanke an unendlich viele verbundene, düstere Räume, aufgegeben an Spinnweben, Erinnerungen und den Eroberer Wurm, bringen rudimentäre Furcht und Abscheu hervor, das gefestigtste Weltbild zu zerstreuen vermag.
 
 Fish Street war so verlassen wie die Hauptstraße, unterschied sich aber durch zahlreiche geziegelte und steinerne Lagerhäuser, noch immer in ausgezeichnetem Zustand. Water Street glich ihr beinahe gänzlich, bis auf die großen Lücken zum Ufer hin, wo einst Werften gestanden hatten. Ich begegnete keinem lebenden Wesen bis auf die verprengten Angler weit draußen an der Mole und ich hörte nichts bis auf das Plätschern der Wellen im Hafen und dem Tosen der Wasserfälle des Manuxet. Diese Stadt begann, mir mehr und mehr auf die Nerven zu gehen und ich schaute heimlich hinter mich als ich meinen Weg zurück über die wackelige Water Street Bridge nahm. Die Fish Street Bridge lag laut der Zeichnung in Trümmern.
+
+Nördlich des Flusses gab es Spuren verwahrlosten Lebens --- Aktive Fischverarbeitungen, rauchende Schornsteine und geflickte Dächer hier und da, gelegentliche Geräusche aus ungewissen Quellen und sporadische, watschelnde Silhouetten in den düsteren Straßen und unbefestigten Gassen --- doch schien mir dies noch beklemmender als die Verlassenheit im Süden. Zum einen waren die Menschen hässlicher und abartiger als jene näher zum Stadtzentrum hin so das ich mehrmals übel an etwas
+absolut Phantastisches erinnert wurde, das ich nicht verorten konnte. Zweifellos trat die fremdartige Verformung der Einwohner von Innsmouth hier stärker zu Tage als weiter landeinwärts --- es sei denn, der \glqq Innsmouth-Anblick\grqq war eine Krankheit und keine Blutlinie, in welchem Fall dieser Stadteil die weiter fortgeschrittenen Fälle beherbergte.
+
+Ein Detail, das mich beunruhigte war die Verbreitung der wenigen, schwachen Geräusche, die ich vernahm. Sie sollten normalerweise aus den sichtbar bewohnten Häusern kommen, doch waren sie in Wirklichkeit oft am lautesten in den am stärksten vebarrikadierten Fassaden zu hören. Man konnte Knarzen, Trippeln und zweifelhafte, heisere Laute wahrnehmen und ich musste unbehaglich an die geheimen Tunnel, die der Junge vom Lebensmittelladen angedeutet hatte, denken. Plötzlich ertappte ich mich dabei, wie ich mich fragte, wie wohl die Stimmen dieser Bewohner klingen mögen. Ich hatte bisher noch kein gesprochenes Wort in diesem Viertel vernommen und war unerklärlich bestrebt dies auch so zu belassen.
+
+Nur lang genug anhaltend um mir zwei schöne, aber verfallene alte Kirchen in der Main und der Church Street anzuschauen, hastete ich aus dem abscheulichen Elendsviertel am Hafen. Mein nächstes logisches Ziel wäre New Church Green gewesen doch irgendwie konnte ich es nicht fertigbringen, noch einmal an der Kirche in deren Keller ich die unfassbar furchteinflößende Gestalt des mit dem seltsamen Diadem gekrönten Priester oder Pastor erspäht hatte, vorbeizugehen. Außerdem hatte mir der Junge aus dem Laden erzählt, dass die Kirchen sowie die Ordenshalle des Dagon keine angebrachten Viertel für Fremde waren.
+
+Dementsprechend hielt ich mich nördlich, entlang der Main zur Martin, dann landeinwärts über die Federal Street, weit nördlich vom Green und betrat dann das verfallene Patrizierviertel der nördlichen Broad, Washington, Lafayette und Adams Street. Obwohl diese imposanten, alten Alleen schlecht befestigt und verwahrlost waren, war der Geist ihrer von Ulmen beschatteten Würde noch nicht ganz verflogen. Villa an Villa verlangte nach meinem Blick, die meisten baufällig und verbarrikadiert in mitten vernachlässigter Grundstücke doch ein bis zwei in jeder Straße zeigten Zeichen von Bewohnung. In der Washington Street stand eine Reihe von vier oder fünf in ausgezeichnetem Zustand mit fein gepflegten Rasen und Gärten. Die üppigste von Ihnen --- mit von weitläufigen Terrassen gesäumten Parterregärten, die sich bis zur Lafayette zurück erstreckten --- nahm ich für das Heim des alten Marsh, leidgeplagten Raffineriebesitzer.
+
+In all diesen Straßen war kein Lebewesen zu sehen und ich wunderte mich ob der Abwesenheit von Hunden und Katzen von Innsmouth. Außerdem verblüfften und beängstigten mich die vielen, sogar in den besterhaltenen Villen, komplett verschlossenen Fenster im dritten Stock und im Dachgeschoss. Heimlichkeit und Verschwiegenheit schienen in dieser totgewschiegenen Stadt von Fremdartigkeit und Tod allgegenwärtig und ich konnte dem Gefühl nicht entkommen, von allen Seiten aus dem Hinterhalt von durchtrieben starrenden Augen beobachtet zu werden, die sich nie verschlossen.
+
+Ich erzitterte als die gesprungene Glocke in einem Turm zu meiner linken Drei schlug. Nur zu gut erinnerte ich mich an die plumpe Kirche von aus der diese Töne drangen. Der Washington Street zum Fluss hin folgend, sah ich mich nun einem ehealigen Industrie- und Handelsviertel gegenüber, die Ruine einer Fabrik voraus bemerkend und sah weitere, mit den Spuren eines alten Bahnhofs und einer überdachten Eisenbahnbrücke jenseits davon, oberhalb der Schlucht zu meiner Rechten.
+
+Die unsichere Brücke vor mir war mit einem Warnschild versehen, doch ich nahm das Risiko auf mich und überquerte sie um wieder zum südlichen Ufer zurückzukeheren, wo die Spuren des Lebens wieder zum Vorschein kamen. Verstohlene, watschelnde Kreaturen starrten hintergründig in meine Richtung und normalere Gesichter betrachteten mich kalt und neugierig. Innsmouth wurde rasch unertragbar und ich bog in die Paine Street in Richtung des Platzes in der Hoffnung, dass mich irgendein Fahrzeug vor der noch in weiter Ferne liegenden Abfahrtszeit jenes finsteren Busses nach Arkham bringen könnte.
+
+Da sah ich die das baufällige Spritzenhaus zu meiner linken und bemerkte den rotgesichtigen, rauschebärtigen, triefäugigen alten Mann in unscheinbaren Lumpen, der davor auf einer Bank saß und mit zwei zerzausten, aber nicht unnormal aussehenden Feuerwehrleuten sprach. Dies musste natürlich Zadok Allen sein, der halb verrückte, trunksüchtige Neunzigjährige, dessen Märchen vom alten Innsmouth und seinem Schatten so sceheußlich und unglaublich waren.
