Mehr von Kapitel 3. Zadoks Suff und Lovecrafts Rassismus

--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -20,5 +20,11 @@ Zum Ende der zweiten Stunde hin fürchtete ich, mein Quart Whiskey würde nicht 
 \glqq Das is' wo's alles angefangen hat --- der verfluchte Ort aller Boshaftigkeit wo das tiefe Wasser beginnt. Höllentor --- eine Klippe bis zu deren Grund keine Lotschnur reicht. Der alte Käpt'n Obed hat's getan --- er hat aufn Südseeinseln mehr rausgefund'n als gut für ihn war.
 
 % venter -- Bauch -> Schiffsbauch? to make a venter -> Einen Schiffsbauch voll Ware umschlagen? -> Geschäfte machen?
-Alle war'n übel dran damals. Handel brach ein, die Fabriken ham' Aufträge verlor'n, sogar die neuen --- un' die besten von unser'n Leuten verlor'n durch Kaperei im Krieg von 1812 oder mit der Eliza und der alten Ranger-Schnau --- beides Gilman-Schiffe. Obed Marsh, er hatte drei Schiffe zu Wasser --- Brigantine \textit{Columby}, Brigg \textit{Hetty} und die Bark \textit{Sumatry Queen}. Er war der einz'ge Käpt'n der Ostindien- und Pazifik-Handel betrieb, obwohl Esdras Martins Barkentine \textit{Malay Pride} da noch bis Achtundzwanzig Geschäfte gemacht hat.
+Alle war'n übel dran damals. Handel brach ein, die Fabriken ham' Aufträge verlor'n, sogar die neuen --- un' die besten von unser'n Leuten verlor'n durch Kaperei im Krieg von 1812 oder mit der Brigg Eliza und der alten Schnau Ranger --- beides Gilman-Schiffe. Obed Marsh, er hatte drei Schiffe zu Wasser --- Brigantine \textit{Columby}, Brigg \textit{Hetty} und die Bark \textit{Sumatry Queen}. Er war der einz'ge Käpt'n der Ostindien- und Pazifik-Handel betrieb, obwohl Esdras Martins Barkentine \textit{Malay Pride} da noch Achtundzwanzig Geschäfte gemacht hat.
+
+Aber 's gab keinen wie Käpt'n Obed, den alten Satansbraten! Hehe! Ich kann ihm nich übel nehmen was er von der Ferne erzählt hat un' wie er die Leute dumm genannt hat, weil sie in die christliche Messe gingen un' ihre Last in Demut und Beschei'nheit getrag'n hab'n! Sagte, die soll'n sich bess're Götter suchen, wie welche von denen auf den Westinnischen sie ha'n, die wür'n guten Fischfang liefern im Austausch für deren Opfer un' wür'n wirklich auf Gebete hör'n!
+
+Matt Eliot, sein erster Maat hat auch viel erzählt, aber er war dageg'n, dass die Leut' irgendwelchen Heidenkram tun! Hat von 'ner Insel östlich von Otaheite erzählt, wo's viele steinerne Ruinen gab', älter als ir'ndwer 's hätte sag'n können, so ähnlich wie die auf Ponape in den Karolinen aber mit Schnitzerei'n von Gesichtern wie die groß'n Statuen auf der Osterinsel. Da war auch 'ne kleine Vulkaninsel in der Nähe mit anderen Schnitzereien --- Ruinen abgeschliffen als wär'n sie einmal unter'm Meer gewesen un' mit Bildern von furchtbar'n Monstern überall.
+
+Also, Matt sagte die Eingebor'nen da hätten all den Fisch gehabt, den sie fangen konnt'n und hatten' Armbänder un' Armreife un' Kopfschmuck aus 'nem seltsamen Gold und voll mit Bildern von Monstern genau wie die in die Ruinen auf der kleinen Insel gehauen waren --- ir'ndwie Fischfrösche oder Froschfische in allen möglichen Position'n als wär'n's Menschen. Keiner hat aus denen rausbekommen wo die all das Zeug herhatten un' all die ander'n Eingeborenen ha'n sich gefragt, wie die soviel Fisch finden konnten, wenn schon die nächste Insel magere Fänge hatte. Matt hat sich das auch gefragt un' auch Käpt'n Obed. Obed hat auch bemerkt, dass viele von den schönen, jungen Leuten auf Nimmerwiederseh'n verschwanden Jahr für Jahr un' dass 's da nich viele Alte gab. Außerdem, dachte er, sah'n manche von den Menschen verdammt merkwürdig aus, sogar für Kanaken.
 \grqq
